<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText"
    >

    <group android:id="@+id/general">
        <item
            android:id="@+id/nav_leyendo"
            android:icon="@drawable/ic_leyendo"
            android:title="@string/mainMenu_leyendo" />
        <item
            android:id="@+id/nav_biblioteca"
            android:icon="@drawable/ic_biblioteca"
            android:title="@string/mainMenu_biblioteca" />
        <item
            android:id="@+id/nav_favorito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_star_border"
            android:title="@string/mainMenu_favoritos" />
        <item
            android:id="@+id/nav_para_leer"
            android:icon="@drawable/ic_access_time"
            android:title="@string/mainMenu_para_leer" />
        <item
            android:id="@+id/nav_leidos"
            android:icon="@drawable/ic_done_all"
            android:title="@string/mainMenu_leidos" />
        <item
            android:id="@+id/nav_papelera"
            android:icon="@drawable/ic_delete"
            android:title="@string/mainMenu_papelera" />
        <item
            android:id="@+id/nav_tienda"
            android:icon="@drawable/ic_tienda"
            android:title="@string/mainMenu_biblioteca_publica" />
    </group>

    <group android:id="@+id/options">
        <item
            android:id="@+id/nav_opciones"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/mainMenu_opciones" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/mainMenu_informacion" />
    </group>

</menu>