<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PerfilLibro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        
        <ImageView
            android:id="@+id/imagen_Perfil"
            android:layout_width="200dp"
            android:layout_height="260dp"
            android:src="@drawable/ic_launcher_background"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

        </ImageView>



            <TextView
                android:id="@+id/titulo_perfil"
                android:text="TITULO"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/autor_perfil"
                android:text="AUTOR"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/perfil_autor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/serie_perfil"
            android:text="SERIE"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/perfil_serie"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lenguaje_perfil"
            android:text="LENGUAJE"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/perfil_idioma"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/identificador_perfil"
            android:text="IDENTIFICADOR"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/perfil_identificador"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/url_perfil"
            android:text="URL"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/perfil_direccion"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>